--- a/src/app/ingreso/registro/registro.component.html
+++ b/src/app/ingreso/registro/registro.component.html
@@ -305,12 +305,10 @@
                 
                 <!-- Fin de Administrador -->
  
-                <br>
-
-                <!-- <h4 style="color: red;">... arreglando captcha ...</h4> -->
+                <br> 
 
                 <!-- <input type="checkbox" required> Acepto los términos y condiciones<br> -->
-
+                <!-- solo local funciona -->
                 <re-captcha class="captcha"
                     formControlName="captcha"
                     name="captcha"
@@ -318,6 +316,19 @@
                     siteKey="6LeaMh4dAAAAAMqmHTJLTmfAdKZLNRNe3kcLV2a4"
                 ></re-captcha>
 
+                <!-- <re-captcha class="captcha"
+                    formControlName="captcha"
+                    name="captcha"
+                    required
+                    siteKey="6LfD_hQdAAAAAOLKu-SMpwNfC0ZR2KeYzL0SHo_Z"
+                ></re-captcha> -->
+
+                <!-- <button class="g-recaptcha"
+                    data-sitekey="6LfKGAEqAAAAADajF4hSeTmabZ1sdzl5p-b6biIv"
+                    data-callback='onSubmit'
+                    data-action='submit'>
+                Submit
+                </button> -->
                 
 
                 <br>
