--- a/src/app/componentes/miperfil/miperfil.component.html
+++ b/src/app/componentes/miperfil/miperfil.component.html
@@ -1,6 +1,6 @@
 <div class="miPerfil">
   <div class="container">  
-
+    <!-- Perfil Admin y especialista -->
     <div class="member d-flex align-items-start" *ngIf="!usuarioLogueado.paciente">
       <div class="pic"><img src={{usuarioLogueado.fotoPerfil}} class="img-fluid" alt=""></div>
       <div class="member-info">
@@ -15,6 +15,7 @@
       </div>
     </div>
 
+    <!-- Perfil paciente -->
     <div class="member2 d-flex align-items-start" *ngIf="usuarioLogueado.paciente">
       <div class="pic">
         <img src={{usuarioLogueado.fotoPerfil}} class="img-fluid" alt=""> 
@@ -31,54 +32,90 @@
         <img src={{usuarioLogueado.fotoPerfilDos}} class="img-fluid" alt="">
       </div>
     </div>
-
   </div>
 
-  <div *ngIf="usuarioLogueado.paciente && !flag && !usuarioLogueado.admin ">
-    
-    <app-mostrar-historia
-    [historia]="historia"
-    >
+  <!-- PARAMETROS DEL MEDICO -->
+  <div *ngIf="usuarioLogueado.especialista" style="margin: 20px 90px;">    
+    <div class="row row-cols-1 row-cols-sm-1 mb-3 text-center cardHistoria">
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm" >
+          <div class="card-header py-3">
+            <h4 class="my-0 fw-normal"><strong>Sumar disponibilidad</strong></h4>
+          </div>
+          <div class="card-body"> 
+              <div> 
+                <label class="custom-control-label">Seleccione dia de la semana: </label>
+                <div *ngIf="seleccioneDia">
+                  <label class="custom-control-label"> {{sliderDiaSemanaString}}</label>
+                </div>
+                
+                <br>
+                <input type="range" min="1" max="6" type="range" (change)="calcularSlider() ; seleccioneDia = true" [(ngModel)]="sliderDiaSemana">
+                <br>
+                <div *ngIf="seleccioneDia">
+                  <label class="custom-control-label">Indique la hora hasta que atendera: </label>
+                  <label *ngIf="sliderHoraComienzo != undefined" class="custom-control-label"> {{sliderHoraComienzo}} hs</label>
 
-    </app-mostrar-historia>
-    
+                  <br>
+                  <input type="range" min="8" max={{maxSliderHora}} type="range"  (change)="calcularSlider(); seleccioneHora = true" [(ngModel)]="sliderHoraComienzo">
+                </div>
+                <div *ngIf="seleccioneHora">
+                  <label class="custom-control-label">Indique la cantidad de turnos a tomar: </label>
+                  <label *ngIf="sliderCantTurnos != undefined" class="custom-control-label">  {{sliderCantTurnos}} turnos</label>
+                  <br>
+                  <input type="range" min="1" max={{maxSliderTurno}} type="range" (change)="calcularSlider()" [(ngModel)]="sliderCantTurnos">
+                </div>             
+              </div>              
+             
+              <div *ngFor="let esp of usuarioLogueado.descripcion"> 
+                <button class="w-100 btn btn-lg btn-outline-primary" (click)="seleccionDispo(esp)">Agregar turno para {{esp}}</button>                 
+                <br><br>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+
+  <!-- Historial del paciente -->
+  <div *ngIf="usuarioLogueado.paciente && !usuarioLogueado.admin" class="container-historiaClinica" style="margin: 100px 90px;">    
+    <h1 class="text-center">Historia Clinica</h1>
+    <button type="submit" class="btn btn-success" (click)="exportarPdf()">Exportar Historial Clinico</button>
+    <br><br><br>
+    <app-mostrar-historia [historia]="turnosHistorias"></app-mostrar-historia>    
+  </div>
+
   <!-- <div id="chartContainer" style="height: 370px; width: 100%; margin-left:auto;margin-right:auto;"></div>
   <div id="chartContainerTurnosDia" style="height: 370px; width: 100%; margin-left:auto;margin-right:auto;"></div> -->
-  <div>
-
-  </div>
-  <div class="form" *ngIf="usuarioLogueado.admin">
-    <!-- <button  type="submit" (click)="descargarLogsAPDF()">
-      Descargar logs pdf
-    </button> -->
+   
+  <!-- ACA NO 
   
+  <div class="form" *ngIf="usuarioLogueado.admin">
+    <button  type="submit" (click)="descargarLogsAPDF()">
+      Descargar logs pdf
+    </button> 
   </div>
-  <!-- <div id="chart0" *ngIf="usuarioLogueado.admin">
+
+  <div id="chart0" *ngIf="usuarioLogueado.admin">
     <table class="table table-striped form-group table-hover">
       <thead>
           <tr>
-              <th>Nombre</th>
-              <th>Apellido</th>
-              <th>Email</th>
-              <th>Dia de ingreso</th>
-              <th>Hora de ingreso</th>
-
+            <th>Nombre</th>
+            <th>Apellido</th>
+            <th>Email</th>
+            <th>Dia de ingreso</th>
+            <th>Hora de ingreso</th>
           </tr>
       </thead>
       <tbody>
           <tr  *ngFor="let log of logs">
-              <td *ngIf="log.usuario.uid != null && log.usuario.uid != ''">{{log.usuario.nombre}}</td>
-              <td *ngIf="log.usuario.uid != null && log.usuario.uid != ''">{{log.usuario.apellido}}</td>
-              <td *ngIf="log.usuario.uid != null && log.usuario.uid != ''">{{log.usuario.email}}</td>
-              <td *ngIf="log.usuario.uid != null && log.usuario.uid != ''">{{log.dia.split('-').reverse().join('-')| date}}</td>
-              <td *ngIf="log.usuario.uid != null && log.usuario.uid != ''">{{log.hora}}</td>
-
-            
-              </tr>
-
-              
-          </tbody>
+            <td *ngIf="log.usuario.uid != null && log.usuario.uid != ''">{{log.usuario.nombre}}</td>
+            <td *ngIf="log.usuario.uid != null && log.usuario.uid != ''">{{log.usuario.apellido}}</td>
+            <td *ngIf="log.usuario.uid != null && log.usuario.uid != ''">{{log.usuario.email}}</td>
+            <td *ngIf="log.usuario.uid != null && log.usuario.uid != ''">{{log.dia.split('-').reverse().join('-')| date}}</td>
+            <td *ngIf="log.usuario.uid != null && log.usuario.uid != ''">{{log.hora}}</td>
+          </tr>
+        </tbody>
           
     </table>
   </div> -->
@@ -136,48 +173,7 @@
     </div> -->
 
 
-  <!-- PARAMETROS DEL MEDICO -->
-  <div *ngIf="usuarioLogueado.especialista" style="margin: 20px 90px;">    
-      <div class="row row-cols-1 row-cols-sm-1 mb-3 text-center cardHistoria">
-        <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm" >
-            <div class="card-header py-3">
-              <h4 class="my-0 fw-normal"><strong>Sumar disponibilidad</strong></h4>
-            </div>
-            <div class="card-body"> 
-                <div> 
-                  <label class="custom-control-label">Seleccione dia de la semana: </label>
-                  <div *ngIf="seleccioneDia">
-                    <label class="custom-control-label"> {{sliderDiaSemanaString}}</label>
-                  </div>
-                  
-                  <br>
-                  <input type="range" min="1" max="6" type="range" (change)="calcularSlider() ; seleccioneDia = true" [(ngModel)]="sliderDiaSemana">
-                  <br>
-                  <div *ngIf="seleccioneDia">
-                    <label class="custom-control-label">Indique la hora hasta que atendera: </label>
-                    <label *ngIf="sliderHoraComienzo != undefined" class="custom-control-label"> {{sliderHoraComienzo}} hs</label>
-
-                    <br>
-                    <input type="range" min="8" max={{maxSliderHora}} type="range"  (change)="calcularSlider(); seleccioneHora = true" [(ngModel)]="sliderHoraComienzo">
-                  </div>
-                  <div *ngIf="seleccioneHora">
-                    <label class="custom-control-label">Indique la cantidad de turnos a tomar: </label>
-                    <label *ngIf="sliderCantTurnos != undefined" class="custom-control-label">  {{sliderCantTurnos}} turnos</label>
-                    <br>
-                    <input type="range" min="1" max={{maxSliderTurno}} type="range" (change)="calcularSlider()" [(ngModel)]="sliderCantTurnos">
-                  </div>             
-                </div>              
-               
-              <div *ngFor="let esp of usuarioLogueado.descripcion"> 
-                <button class="w-100 btn btn-lg btn-outline-primary" (click)="seleccionDispo(esp)">Agregar turno para {{esp}}</button>                 
-                <br><br>
-              </div>
-            </div>
-          </div>
-        </div>
-    </div>
-  </div>
+  
     
 </div>
 
