--- a/src/app/componentes/turnos/misturnos/misturnos.component.html
+++ b/src/app/componentes/turnos/misturnos/misturnos.component.html
@@ -1,7 +1,7 @@
-<!-- <div *ngIf="mostrarHistoria">
+<div *ngIf="mostrarHistoria">
     <app-historia-clinica [turnoSeleccionado]="turnoSeleccionado"></app-historia-clinica>
 
-</div> -->
+</div>
 <div class="misturnos" *ngIf="!mostrarHistoria">    
     <h2 class="text-center" *ngIf="!usuarioLogueado.admin">Mis Turnos</h2>
     <h2 class="text-center text-danger" *ngIf="usuarioLogueado.admin">Turnos registrados en el sistema</h2>
@@ -39,13 +39,12 @@
                     <td *ngIf="turno.estado == 'REALIZADO' && turno.comentarioPaciente.length === 0">
                         <button class="btn btn-primary" (click)="calificarAtencion(turno)">Calificar Atención</button>
                     </td>
-                    <!-- <td *ngIf="turno.estado == 'REALIZADO' && turno.resenia != '' && turno.resenia != undefined"><button class="btn btn-primary" (click)="completarEncuesta(turno)">Completar encuesta</button></td> -->
+                    <!-- <td *ngIf="turno.estado == 'REALIZADO' && turno.resenia != '' && turno.resenia != undefined">
+                        <button class="btn btn-historial" (click)="completarEncuesta(turno)">Completar encuesta</button>
+                    </td> -->
                 </a>
-    
             </div>
-            
         </div>
-
     </div>
 
     <!-- VISTA ESPECIALISTA -->
@@ -55,12 +54,11 @@
                 <div class="form-group" *ngIf="usuarioLogueado.especialista">
                     <label for="search-text">FILTRO</label>
                     <input type="email" class="form-control" id="search-text" aria-describedby="search-text" 
-                    [(ngModel)]="textoABuscar" placeholder="Ingrese paciente o especialidad a buscar" 
-                    autofocus>
+                        [(ngModel)]="textoABuscar" placeholder="Ingrese paciente o especialidad a buscar" autofocus>
                 </div>
-
             </div>
         </div>
+
         <div class="layout">
             <div *ngFor="let turno of misTurnos | appFilter: textoABuscar; let i = index">
                 <a class="list-group-item list-group-item-action" >
@@ -72,41 +70,36 @@
                     
                     <p>Estado: <strong [ngClass]="getEstadoClass(turno.estado)">{{turno.estado}}</strong></p>
         
-                        <small>Paciente: {{turno.paciente.nombre}}, {{turno.paciente.apellido}}</small>
+                    <small>Paciente: {{turno.paciente.nombre}}, {{turno.paciente.apellido}}</small>
                         
-                        <td *ngIf="turno.estado != 'REALIZADO' && turno.estado != 'RECHAZADO' && turno.estado != 'CANCELADO' && turno.estado != 'ACEPTADO'">
-                            <button class="btn btn-aceptar" (click)="aceptarTurno(turno)">Aceptar</button>
-                        </td>
-                        <td *ngIf="turno.estado != 'ACEPTADO' && turno.estado != 'RECHAZADO' && turno.estado != 'REALIZADO' && turno.estado != 'CANCELADO'">
-                            <button class="btn btn-cancelar" (click)="cancelarTurno(turno)">Cancelar</button>
-                        </td>
-                        <td *ngIf="turno.estado != 'ACEPTADO' && turno.estado != 'REALIZADO' && turno.estado != 'RECHAZADO' && turno.estado != 'CANCELADO'">
-                            <button class="btn btn-rechazar" (click)="rechazarTurno(turno)">Rechazar</button>
-                        </td>
-                        <td *ngIf="turno.estado == 'ACEPTADO'">
-                            <button class="btn btn-finalizar" (click)="finalizarTurno(turno)">Finalizar</button>
-                        </td>
-                        <td *ngIf="turno.resenia != undefined && turno.resenia != '' ">
-                            <button class="btn btn-resenia" (click)="verResenia(turno)">Ver reseña</button>
-                        </td>
-                        <!-- <td *ngIf="turno.estado == 'REALIZADO'"><button class="btn btn-primary" (click)="cargarHistoriaClinica(turno)">Cargar historia clinica</button></td> -->
-                        
+                    <td *ngIf="turno.estado != 'REALIZADO' && turno.estado != 'RECHAZADO' && turno.estado != 'CANCELADO' && turno.estado != 'ACEPTADO'">
+                        <button class="btn btn-aceptar" (click)="aceptarTurno(turno)">Aceptar</button>
+                    </td>
+                    <td *ngIf="turno.estado != 'ACEPTADO' && turno.estado != 'RECHAZADO' && turno.estado != 'REALIZADO' && turno.estado != 'CANCELADO'">
+                        <button class="btn btn-cancelar" (click)="cancelarTurno(turno)">Cancelar</button>
+                    </td>
+                    <td *ngIf="turno.estado != 'ACEPTADO' && turno.estado != 'REALIZADO' && turno.estado != 'RECHAZADO' && turno.estado != 'CANCELADO'">
+                        <button class="btn btn-rechazar" (click)="rechazarTurno(turno)">Rechazar</button>
+                    </td>
+                    <td *ngIf="turno.estado == 'ACEPTADO'">
+                        <button class="btn btn-finalizar" (click)="finalizarTurno(turno)">Finalizar</button>
+                    </td>
+                    <td *ngIf="turno.resenia != undefined && turno.resenia != '' ">
+                        <button class="btn btn-resenia" (click)="verResenia(turno)">Ver reseña</button>
+                    </td>
+                    <td *ngIf="turno.estado == 'REALIZADO'">
+                        <button class="btn btn-historial" (click)="cargarHistoriaClinica(turno)">Cargar historia clinica</button>
+                    </td>
                 </a>
-    
             </div>
-            
         </div>
 
-        <!-- <div class="list-group">
+        <div class="list-group">
             <div *ngIf="usuarioLogueado.especialista">
-                <app-mostrar-historia-medico [historia]="historias">
-
-                </app-mostrar-historia-medico>
-            
+                <app-mostrar-historia-medico [historia]="historias"></app-mostrar-historia-medico>
             </div>
-        </div> -->
+        </div>
     </div>
-
 
     <!-- VISTA ADMINISTRADOR -->
     <div *ngIf="usuarioLogueado.admin" style="margin-top: -5%;">    
@@ -134,14 +127,8 @@
                     <td *ngIf="turno.estado != 'ACEPTADO' && turno.estado != 'RECHAZADO' && turno.estado != 'REALIZADO' && turno.estado != 'CANCELADO'">
                         <button class="btn btn-cancelar" (click)="cancelarTurno(turno)">Cancelar turno</button>
                     </td>                        
-                </a>
-    
-            </div>
-            
+                </a>    
+            </div>            
         </div>
-    </div>
-
-    
-
-
+    </div>   
 </div>
