--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -109,10 +109,10 @@
                           *ngIf="(this.usuarioLogueado != null && this.usuarioLogueado.paciente )" 
                           [routerLink]="'/solicitarTurno'">Solicitar Turno</a>
 
-                        <!-- <li class="nav-item" *ngIf="usuarioLogueado.especialista">
+                        <li class="nav-item" *ngIf="usuarioLogueado.especialista">
                             <a [routerLink]="'/pacientes'" routerLinkActive="active"
                                 class="nav-link borderFade">Pacientes</a>
-                        </li> -->
+                        </li>
                         <!-- 
                         <li class="nav-item">
                             <a class="nav-link borderFade"
