--- a/src/app/componentes/admin/admin.component.css
+++ b/src/app/componentes/admin/admin.component.css
@@ -4,6 +4,27 @@
   flex-direction: row;
   margin-bottom: 10px;
 }
+
+.container-button {
+  display: flex;
+  align-items: center;
+  justify-items: stretch;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+
+  button { 
+    color: #FFFFFF;
+    font-weight: 700;
+  }
+}
+
+.conteinerHistorial{
+  background-color: rgba(184, 135, 11, 0.535);
+  border-radius: 3%;
+  padding: 5%;
+  margin-bottom: 10%;
+}
+
 .test{
   
     flex-direction: row;
